--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 
     </main>
 
-    <!-- <script src="./js/script.js"></script> -->
+    <script src="./js/script.js"></script>
     <script src="./js/dowloadpdf.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.0/html2pdf.bundle.min.js"></script>
 
